--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <title>Desafio</title>
 </head>
 <body>
-    <h1>Hola</h1>  
-    <script src="./js/index.js"></script>  
+    <h1>Store</h1> 
+     <table>
+        <thead>
+            <tr>
+                <th>SERVICIO</th>
+                <th>PLAN</th>
+                <th>IMPORTE</th>
+                <th>FINAL</th>
+            </tr>
+        </thead>
+        <Tbody id="infoTabla"></Tbody>
+     </table>
+    <script src="./js/index.js"></script> 
+    <script src="./js/prueba.js"></script>
+    <script src="./js/dom.js"></script>
+
 </body>
 </html>
