agregando algo CSS

--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Desafio</title>
 </head>
 <body>
-    <h1>Store</h1> 
-     <table>
-        <thead>
-            <tr>
-                <th>SERVICIO</th>
-                <th>PLAN</th>
-                <th>IMPORTE</th>
-                <th>FINAL</th>
-            </tr>
-        </thead>
-        <Tbody id="infoTabla"></Tbody>
-     </table>
+    <section class="general">
+        <h1>STORE</h1> 
+        <table class="tablaGeneral">
+            <thead class="cabecera">
+                <tr>
+                    <th>SERVICIO</th>
+                    <th>PLAN</th>
+                    <th>IMPORTE</th>
+                    <th>FINAL</th>
+                </tr>
+            </thead>
+            <Tbody id="infoTabla"></Tbody>
+        </table>
+    </section> 
     <script src="./js/index.js"></script> 
     <script src="./js/prueba.js"></script>
     <script src="./js/dom.js"></script>
