--- a/index.html
+++ b/index.html
@@ -23,9 +23,16 @@
             <Tbody id="infoTabla"></Tbody>
         </table>
     </section> 
+    <section class="cargas">
+        <input type="text" id="inputServicio" placeholder="Servicio agregar">
+        <input type="text" id="inputDescripcion" placeholder="Descripcion del servicio">
+        <input type="number" id="inputImporte" placeholder="Importe del producto y/o servicio">
+        <input type="number" id="inputIva" placeholder="Impuestos del producto">
+        <button type="submit" id="agregando"> Agregar servicio</button>
+    </section>
     <script src="./js/index.js"></script> 
-    <script src="./js/prueba.js"></script>
     <script src="./js/dom.js"></script>
+    <script src="./js/eventos.js"></script>
 
 </body>
 </html>
