--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                     <th>PLAN</th>
                     <th>IMPORTE</th>
                     <th>FINAL</th>
-                </tr>
+                    <th>AÑADIR AL CARRO</th>                      
+                </tr> 
             </thead>
             <Tbody id="infoTabla"></Tbody>
         </table>
@@ -27,10 +28,11 @@
         <input type="text" id="inputServicio" placeholder="Servicio agregar">
         <input type="text" id="inputDescripcion" placeholder="Descripcion del servicio">
         <input type="number" id="inputImporte" placeholder="Importe del producto y/o servicio">
-        <input type="number" id="inputIva" placeholder="Impuestos del producto">
+        <input type="number" id="inputIva" placeholder="Cuanto impuesto tiene su servicio">
         <button type="submit" id="agregando"> Agregar servicio</button>
     </section>
     <script src="./js/index.js"></script> 
     <script src="./js/dom.js"></script>
 </body>
 </html>
+
