--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </thead>
             <Tbody id="infoTabla"></Tbody>
         </table>
+        <h2 id="precioTotal">TOTAL:</h2>
     </section> 
     <section class="cargas">
         <input type="text" id="inputServicio" placeholder="Servicio agregar">
