--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <title>Desafio</title>
 </head>
 <body>
@@ -24,6 +25,7 @@
             <Tbody id="infoTabla"></Tbody>
         </table>
         <h2 id="precioTotal">TOTAL:</h2>
+        <button id="vaciar">Vaciar carro</button>
     </section> 
     <section class="cargas">
         <input type="text" id="inputServicio" placeholder="Servicio agregar">
@@ -34,6 +36,8 @@
     </section>
     <script src="./js/index.js"></script> 
     <script src="./js/dom.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
 
